fix: improve css dark mode

--- a/src/layouts/containers/Admin/Footer/Footer.module.css
+++ b/src/layouts/containers/Admin/Footer/Footer.module.css
@@ -7,7 +7,10 @@
   max-height: 60px;
   position: fixed;
   padding: 1rem;
-  background-color: var(--mantine-color-white);
+  background-color: light-dark(
+    var(--mantine-color-white),
+    var(--mantine-color-dark-7)
+  );
   box-sizing: border-box;
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
