--- a/src/layouts/containers/Admin/Header/Header.module.css
+++ b/src/layouts/containers/Admin/Header/Header.module.css
@@ -7,6 +7,12 @@
   max-height: 70px;
   position: fixed;
   box-sizing: border-box;
-  padding: 1rem var(--mantine-navbar-width, 3rem) 1rem var(--mantine-navbar-width, 7rem);
-  background: rgb(248, 249, 250);
+  padding: 1rem var(--mantine-navbar-width, 3rem) 1rem
+    var(--mantine-navbar-width, 7rem);
+  background-color: light-dark(
+    var(--mantine-color-white),
+    var(--mantine-color-dark-7)
+  );
+  border-bottom: rem(1px) solid
+    light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
 }
