--- a/src/layouts/containers/Admin/Main.module.css
+++ b/src/layouts/containers/Admin/Main.module.css
@@ -7,7 +7,10 @@
   padding-bottom: calc(var(--mantine-footer-height, 2.5rem) + 16px);
   padding-left: calc(var(--mantine-navbar-width, 4rem) + 16px);
   padding-right: calc(var(--mantine-aside-width, 0px) + 16px);
-  background: rgb(248, 249, 250);
+  background-color: light-dark(
+    var(--mantine-color-white),
+    var(--mantine-color-dark-6)
+  );
 }
 
 .section {
