--- a/src/layouts/containers/Admin/Sidebar/Sidebar.module.css
+++ b/src/layouts/containers/Admin/Sidebar/Sidebar.module.css
@@ -14,7 +14,10 @@
   flex-direction: column;
   padding: 1rem;
   box-sizing: border-box;
-  background-color: var(--mantine-color-white);
+  background-color: light-dark(
+    var(--mantine-color-white),
+    var(--mantine-color-dark-8)
+  );
   border-right: rem(1px) solid
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
